# big-data-playground

./: .gitignore  .template.env  LICENSE  README.md  nosql.ipynb  presentation.py  project.ipynb  pyproject.toml  sql.ipynb
data/: temp-lulea.csv
instruktioner/: Dag 1 - översikt.md  Dag 2 - arbetsflöde.md  Presentation.md
