[tool.poetry]
name = "big-data-playground"
version = "0.1.0"
description = ""
authors = ["Olof Beckman <olof@olofbeckman.se>"]
license = "MIT"
readme = "README.md"
packages = [{include = "big_data_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
